--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pinch_zoom_image</name>
+	<name>pos_pinch_zoom_image</name>
 	<comment>Project pinch_zoom_image created by Buildship.</comment>
 	<projects>
 	</projects>
